docs: info box as blue based border and text color

--- a/docs/.vitepress/theme/index.css
+++ b/docs/.vitepress/theme/index.css
@@ -39,6 +39,15 @@
 }
 
 /**
+   * Component: Containers
+   * -------------------------------------------------------------------------- */
+
+:root {
+    --vp-custom-block-info-border: #0078c3;
+    --vp-custom-block-info-text: #0078c3;
+}
+
+/**
    * Component: Home
    * -------------------------------------------------------------------------- */
 
